--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
-  "name": "my_first_contract",
+  "name": "test_contract",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "compile": "ts-node ./scripts/compile.ts"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.7.26",
+    "@ton-community/func-js": "^0.7.0",
+    "@ton/core": "^0.58.1",
+    "@types/node": "^22.5.5",
+    "ton-crypto": "^3.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@ton/crypto": "^3.3.0"
+  }
 }
