--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "compile": "ts-node ./scripts/compile.ts"
+    "compile": "ts-node ./scripts/compile.ts",
+    "test": "yarn compile && yarn jest"
   },
   "devDependencies": {
     "@swc/core": "^1.7.26",
     "@ton-community/func-js": "^0.7.0",
     "@ton/core": "^0.58.1",
+    "@ton/sandbox": "^0.20.0",
+    "@ton/test-utils": "^0.4.2",
+    "@ton/ton": "^15.0.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
     "ton-crypto": "^3.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@ton/crypto": "^3.3.0"
+    "@ton/crypto": "^3.3.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
