--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "compile": "ts-node ./scripts/compile.ts",
-    "test": "yarn compile && yarn jest"
+    "test": "yarn compile && yarn jest",
+    "deploy:testnet": "yarn compile && ts-node ./scripts/deploy.ts"
   },
   "devDependencies": {
     "@swc/core": "^1.7.26",
@@ -16,6 +17,10 @@
     "@ton/ton": "^15.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
+    "@types/qrcode-terminal": "^0.12.2",
+    "@types/qs": "^6.9.16",
+    "qrcode-terminal": "^0.12.0",
+    "qs": "^6.13.0",
     "ton-crypto": "^3.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
