--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "scripts": {
     "compile": "ts-node ./scripts/compile.ts",
-    "test": "yarn compile && yarn jest",
+    "test": "jest",
     "deploy:testnet": "yarn compile && ts-node ./scripts/deploy.ts"
   },
   "devDependencies": {
     "@swc/core": "^1.7.26",
     "@ton-community/func-js": "^0.7.0",
+    "@ton/blueprint": "^0.24.0",
     "@ton/core": "^0.58.1",
     "@ton/sandbox": "^0.20.0",
     "@ton/test-utils": "^0.4.2",
@@ -26,8 +27,10 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@ton-community/blueprint": "^0.12.0",
     "@ton/crypto": "^3.3.0",
     "jest": "^29.7.0",
+    "ton-core": "^0.53.0",
     "ts-jest": "^29.2.5"
   }
 }
